<resources>
    <string name="app_name">Yess Boss</string>

    <string name="search_hint">Type Task</string>
    <string name="title_string">Add A Task</string>
    <string name="task_to_do">Task To Do</string>
    <string name="on_date">On Date</string>
    <string name="on_time">On Time</string>
    <string name="under_category_of">Under The Category Of</string>
    <string name="priority_label">With Priority Level Of</string>
    <string name="low_level">Low</string>
    <string name="mid_level">Medium</string>
    <string name="high_level">High</string>
    <string name="create_task_category">Create Task Category</string>
    <string name="category_name">Category Name</string>
    <string name="cancel">Cancel</string>
    <string name="preference_file">com.example.princeporosh.yessboss.preference.tempstorage</string>
    <string name="log_text">As we saw, RecyclerView is more effective than ListView, so I prefer to use it in my project. But recently I have a trouble when put it in my custom ViewGroup. RecyclerView is easy to set scrollbars in xml like this:</string>
    <string name="no_task">No Pending Task</string>

</resources>
